Prevent keyboard events from listening to Meta key'd inputs.
Fixed underline not showing.

--- a/src/app/modules/shared/directives/keyboard-shortcut/keyboard-shortcut.directive.scss
+++ b/src/app/modules/shared/directives/keyboard-shortcut/keyboard-shortcut.directive.scss
@@ -10,6 +10,7 @@
         display: grid;
         grid-auto-flow: column;
         align-content: center;
+        justify-content: center;
         text-align: center;
         width: 100%;
         height: 100%;
@@ -19,7 +20,6 @@
     }
 
     .accent {
-        display: contents;
         text-underline-position: under;
     }
 }
@@ -31,7 +31,7 @@ input-checkbox .keyboard-shortcut-overlay {
     padding-left: 36px;
 }
 
-.show-keyboard-hints .keyboard-shortcut .accent {
+.show-keyboard-hints .keyboard-shortcut-overlay .accent {
     text-decoration: underline variables.$theme-text;
 }
 
